<resources>
    <string name="app_name">LoveCalculatorMvvm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="love_calculate">Love Calculate</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="calculate">Calculate</string>
    <string name="you">You</string>
    <string name="try_again">Try Again!</string>
    <string name="me">Me</string>
    <string name="love">❤</string>
</resources>