<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="8dp"
    tools:context=".ResultFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_love"
        />
    <TextView
        android:layout_width="wrap_content"
        android:text="@string/you"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/green"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="wrap_content"
        android:text="@string/love"
        android:textSize="32sp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/me"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/green"
        android:layout_gravity="center"
        android:layout_height="wrap_content"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_stop"/>

        <TextView
            android:id="@+id/result_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10%"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_gravity="center"/>
    </FrameLayout>



    <Button
        android:id="@+id/try_again_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/try_again"
        android:textSize="16sp"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"/>

</LinearLayout>